fix: fixed infinite loop in mobile when breadcrumb has overflow

--- a/src/components/z-breadcrumb/styles.css
+++ b/src/components/z-breadcrumb/styles.css
@@ -3,7 +3,8 @@
   font-family: var(--font-family-sans);
   font-weight: var(--font-rg);
 
-  --line-clamp: 0;
+  --line-clamp-popover: 0;
+  --line-clamp-mobile: 1;
 }
 
 button {
@@ -55,7 +56,7 @@ li {
   display: -webkit-box !important;
   overflow: hidden;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: var(--line-clamp);
+  -webkit-line-clamp: var(--line-clamp-mobile);
   text-overflow: ellipsis;
   white-space: normal;
 }
@@ -119,5 +120,9 @@ nav.semibold > ol > li button {
     flex: 1;
     color: var(--color-disabled03);
     content: "\203A";
+  }
+
+  :host a.text-ellipsis {
+    -webkit-line-clamp: var(--line-clamp-popover);
   }
 }
